--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -35,14 +35,14 @@
             <span class="icon icon-cog icon-sm" ng-click="NowPlaying.openSettingsPopup()"></span>
         </div>
         <a class="media-player-btns margin-top-ten">
-            <span class="icon icon-shuffle icon-sm" ng-click="NowPlaying.shuffle()"></span>
+            <!--<span class="icon icon-shuffle icon-sm" ng-click="NowPlaying.shuffle()"></span>-->
             <span class="icon icon-backward-circle" ng-click="NowPlaying.backward()"></span>
             <span ng-if="!NowPlaying.playing" class="icon icon-play-circle icon-main"
                   ng-click="NowPlaying.playAudio()"></span>
             <span ng-if="NowPlaying.playing" class="icon icon-pause-circle icon-main"
                   ng-click="NowPlaying.pause()"></span>
-            <span class="icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>
-            <span class="icon icon-repeat icon-sm" ng-click="NowPlaying.repeatTrack()"></span>
+            <!--<span class="icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>-->
+            <!--<span class="icon icon-repeat icon-sm" ng-click="NowPlaying.repeatTrack()"></span>-->
             <span class="icon icon-repeat-one icon-sm primaryTheme hidden"></span>
             <span class="icon icon-repeat icon-sm primaryTheme hidden"></span>
             </a>
