--- a/widget/templates/modals/audio-setting.html
+++ b/widget/templates/modals/audio-setting.html
@@ -1,7 +1,7 @@
 <div class="header clearfix border-bottom-grey">
     <h5 class="item-link-header text-center">Setting</h5>
 </div>
-<div class="modal-body">
+<div class="modal-body" style="margin-top: 488px;">
     <div class="overlay" style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8);">
         <div class="overlay-content" style="postiion:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
             <div class="media-player-settings">
