--- a/widget/templates/modals/more-info.html
+++ b/widget/templates/modals/more-info.html
@@ -7,26 +7,29 @@
             <div class="media-player-more-info">
                 <div class="media-holder margin-top-thirty">
                     <div class="media-inner text-center">
-                        <img ng-if="MoreInfoModal.info.data.image" class="border-radius-two"
+                        <img style="margin-left: 90px;margin-top: 30px;" ng-if="MoreInfoModal.info.data.image" class="border-radius-two"
                              ng-src="{{MoreInfoModal.info.data.image}}">
                     </div>
                 </div>
                 <hr class="none">
                 <div class="media-player-info margin-top-twenty">
-                    <h4 class="margin-zero ellipsis">{{MoreInfoModal.info.data.artists}}</h4>
+                    <h4 class="margin-zero ellipsis text-center">{{MoreInfoModal.info.data.artists}}</h4>
 
-                    <p class="margin-zero ellipsis">{{MoreInfoModal.info.data.audioTitle}}</p>
+                    <p class="margin-zero ellipsis text-center">{{MoreInfoModal.info.data.audioTitle}}</p>
                 </div>
                 <hr class="none">
                 <div class="more-info-list padded">
-                    <div class="text-center item">
+                    <!--<div class="text-center item">
                         <a>Go to Playlist</a>
+                    </div>-->
+                    <div ng-if="MoreInfoModal.info.data.links.length" class="text-center item" ng-repeat="link in MoreInfoModal.info.data.links">
+                        <a>{{link.title}}</a>
                     </div>
                     <div class="text-center item">
                         <a ng-click="MoreInfoModal.add(MoreInfoModal.info.data.audioTitle,MoreInfoModal.info.data.audioUrl,MoreInfoModal.info.data.image,MoreInfoModal.info.data.artists)">Add to Playlist</a>
                     </div>
                     <div class="text-center item">
-                        <a>Remove from Playlist</a>
+                        <a ng-click="MoreInfoModal.remove()">Remove from Playlist</a>
                     </div>
                     <div class="text-center item">
                         <a>Purchase</a>
@@ -35,7 +38,7 @@
                         <a>Share</a>
                     </div>
                     <div class="text-center item">
-                        <a>Cancel</a>
+                        <a ng-click="MoreInfoModal.cancel()">Cancel</a>
                     </div>
                 </div>
                 <hr class="none">
