blurred bg image added to now-playing.html

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -300,3 +300,21 @@ videogular, [videogular]{
     background-color: transparent !important;
 }
 
+
+/*Styles for Now playing bg img*/
+.holder.now-playing .bg-blurred-image{
+    -o-filter:blur(10px) brightness(0.2);
+    -moz-filter:blur(10px) brightness(0.2);
+    -webkit-filter:blur(10px) brightness(0.2);
+    filter:blur(10px) brightness(0.6);
+    position:fixed;
+    top:-5%;
+    left:-5%;
+    -o-background-size:cover;
+    -moz-background-size:cover;
+    -webkit-background-size:cover;
+    background-size:cover;
+    height:110%;
+    width:110%;
+    z-index:-1;
+}
