--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -58,7 +58,7 @@
 <div class="item clearfix row">
     <div class="main col-md-9 pull-right padding-left-zero row">
         <div class="pull-left inner-main col-md-8 padding-zero">
-            <input type="text" class="form-control" placeholder="Plugin Name" ng-model="search">
+            <input type="text" class="form-control" placeholder="Item Name" ng-model="search">
 
         </div>
         <div class="col-md-4 pull-right">
