#31 : Deleting item popup wording issues : Fixed

--- a/control/content/templates/modals/rm-item-modal.html
+++ b/control/content/templates/modals/rm-item-modal.html
@@ -1,10 +1,10 @@
 <div class="header clearfix border-bottom-grey">
-    <h4 class="margin-zero">Confirmation</h4>
+    <h4 class="margin-zero">Delete Item</h4>
     <span class="icon icon-cross2 close-modal" ng-click="RemovePopup.cancel('Close Modal');"></span>
 </div>
 <div class="padded clearfix">
     <div class="content">
-        <p class="margin-zero">Are you sure you want to remove {{RemovePopup.title}}?</p>
+        <p class="margin-zero">Are you sure you want to delete this item?</p>
     </div>
 </div>
 <div class="bottom border-top-grey clearfix">
