--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -1,7 +1,7 @@
 <div class="holder padding-zero">
-    <div id="scroll-infinite" class="media-center-plugin people-plugin layout1">
-        <div class="media-center-banner  plugin-banner clearfix border-bottom-grey">
-            <buildfire-carousel images="WidgetHome.media.data.content.images"></buildfire-carousel>
+    <div id="scroll-infinite" class="media-center-plugin layout1">
+        <div class="plugin-banner clearfix border-bottom-grey">
+            <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix">
             <p ng-if="WidgetHome.media.data.content.descriptionHTML"
