--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,7 +1,7 @@
 <div class="holder padding-zero">
     <div id="scroll-infinite" class="media-center-plugin layout3">
         <div class="plugin-banner clearfix border-bottom-grey">
-            <buildfire-carousel images="WidgetHome.media.data.content.images"></buildfire-carousel>
+            <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="padded text-left">
             <p class="margin-bottom-zero" ng-if="WidgetHome.media.data.content.descriptionHTML" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">{{WidgetHome.media.data.content.descriptionHTML}}</p>
