--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -49,13 +49,14 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-4 pull-right">
-            <a class="btn btn-success pull-right stretch" href="#/media">Add New Item</a>
-        </div>
+
     </div>
 </div>
 <hr>
 <div class="item clearfix row">
+    <div class="col-md-3 pull-left">
+        <a class="btn btn-success pull-right stretch" href="#/media">Add New Item</a>
+    </div>
     <div class="main col-md-9 pull-right padding-left-zero row">
         <div class="pull-left inner-main col-md-8 padding-zero">
             <input type="text" class="form-control" placeholder="Item Name" ng-model="search">
