--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -129,6 +129,15 @@
 <hr>
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
+        <span>Media Date</span>
+    </div>
+    <div class="main col-md-9 pull-right">
+        <input dt="{{ContentMedia.item.data.mediaDate}}" type="date" class="form-control" ng-model="ContentMedia.item.data.mediaDate" />
+    </div>
+</div>
+<hr>
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Links</span>
     </div>
     <div class="main col-md-9 pull-right">
