--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -19,7 +19,7 @@
                 <div class="padded text-left">
                     <a class="text-primary" href="#/media/{{item.id}}">{{item.data.title}}</a>
                     <p class="margin-bottom-zero">{{item.data.summary}}</p>
-                    <span class="list-item-date" data-ng-if="item.data.dateCreated">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
+                    <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
                 </div>
             </div>
         </div>
