--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -95,7 +95,7 @@
                     <span class="btn-icon btn-link-icon btn-primary transition-third"
                           onclick="window.openDialog('deepLink.html', null, 'sm', null)"></span>
                     <span class="btn-icon btn-delete-icon btn-danger transition-third"
-                          ng-click="ContentHome.removeListItem($index)"></span>
+                          ng-click="ContentHome.removeListItem($index,$event)"></span>
                         </div>
                     </div>
                 </div>
