#47 and #48 : bug fixed

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -1,8 +1,10 @@
 <div class="holder now-playing text-center">
-    <div class="bg-blurred-image" ng-style="NowPlaying.item.data.image? {'background':'url({{NowPlaying.item.data.image}}) no-repeat center center'}:{'background':'black'}" ></div>
+    <div class="bg-blurred-image"
+         ng-style="NowPlaying.item.data.image? {'background':'url({{NowPlaying.item.data.image}}) no-repeat center center'}:{'background':'black'}"></div>
     <div class="media-center-plugin">
         <div class="media-header-link">
-            <a ng-click="NowPlaying.add(NowPlaying.item.data.audioTitle,NowPlaying.item.data.audioUrl,NowPlaying.item.data.image,NowPlaying.item.data.artists)">Add to Playlist</a>
+            <a ng-click="NowPlaying.add(NowPlaying.item.data.audioTitle,NowPlaying.item.data.audioUrl,NowPlaying.item.data.image,NowPlaying.item.data.artists)">Add
+                to Playlist</a>
         </div>
         <div class="media-holder margin-top-fifteen">
             <div class="media-inner text-center">
@@ -14,13 +16,15 @@
         </div>
         <div class="media-player-info margin-top-fifteen">
             <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
+
             <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
         </div>
-        <div class="slider margin-top-fifteen" style="margin-bottom: -50px;">
+        <div class="slider margin-top-ten" style="margin-bottom: -70px;">
             <div class="playerMP">
                 <div>{{NowPlaying.currentTime | number:0}}</div>
                 <div><input ng-show="NowPlaying.duration" type="range" min="0" max="{{NowPlaying.duration}}"
-                            ng-model="NowPlaying.currentTime" ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"/></div>
+                            ng-model="NowPlaying.currentTime"
+                            ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"/></div>
                 <div>{{NowPlaying.duration | number:0}}</div>
             </div>
         </div>
@@ -28,7 +32,11 @@
             <span class="icon icon-dots"></span>
         </div>
         <div class="media-player-action-btns margin-top-twenty">
-            &nbsp;<input class="rotate-270" ng-style="NowPlaying.showVolume? {'visibility':'visible'}:{'visibility':'hidden'}"  type="range" min="0" max="1" step="0.1" ng-model="NowPlaying.volume" ng-change="NowPlaying.changeVolume(NowPlaying.volume)" style="width: 15%;margin-left: 82px;margin-bottom: 30px;margin-top: 39px;"/>
+            &nbsp;<input class="rotate-270"
+                         ng-style="NowPlaying.showVolume? {'visibility':'visible'}:{'visibility':'hidden'}" type="range"
+                         min="0" max="1" step="0.1" ng-model="NowPlaying.volume"
+                         ng-change="NowPlaying.changeVolume(NowPlaying.volume)"
+                         style="width: 15%;margin-left: 82px;margin-bottom: 30px;margin-top: 39px;"/>
 
             <span class="icon icon-volume-high icon-sm" ng-click="NowPlaying.showVolume=!NowPlaying.showVolume"></span>
             <span class="icon icon-ellipsis icon-sm" ng-click="NowPlaying.openMoreInfoPopup()"></span>
@@ -45,7 +53,7 @@
             <!--<span class="icon icon-repeat icon-sm" ng-click="NowPlaying.repeatTrack()"></span>-->
             <span class="icon icon-repeat-one icon-sm primaryTheme hidden"></span>
             <span class="icon icon-repeat icon-sm primaryTheme hidden"></span>
-            </a>
-        </div>
+        </a>
     </div>
+</div>
 </div>
