--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -16,7 +16,7 @@
                      infinite-scroll-container='"#scroll-infinite"'
                      infinit-scroll-disabled="WidgetHome.noMore"
                       >
-                    <div class="col-xs-6 pull-left" ng-repeat="item in WidgetHome.items" ng-class-odd="list-item-odd" ng-class-even="list-item-even" >
+                    <div class="clickable col-xs-6 pull-left" ng-repeat="item in WidgetHome.items" ng-click="WidgetHome.goToMedia($index)" ng-class-odd="list-item-odd" ng-class-even="list-item-even" >
                         <div class="list-item-media text-center border-radius-three overflow-hidden">
                             <div play-btn="{{item.data.videoUrl.length > 0}}" class="list-media-holder"
                                  ng-if="item.data.topImage">
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <div class="list-item-copy text-left">
-                            <p class="ellipsis margin-zero"><a class="text-primary" href="#/media/{{item.id}}">{{item.data.title}}</a></p>
+                            <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
 
                             <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
                             <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
