--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -22,9 +22,10 @@
         <div class="slider margin-top-ten" style="margin-bottom: -70px;">
             <div class="playerMP">
                 <div ng-if="NowPlaying.currentTime">{{NowPlaying.currentTime | secondsToDateTime | date:'mm:ss'}}</div>
-                <div><input ng-show="NowPlaying.duration" type="range" min="0" max="{{NowPlaying.duration}}"
+                <div><input type="range" min="0" max="{{NowPlaying.duration}}"
                             ng-model="NowPlaying.currentTime"
-                            ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"/></div>
+                            ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"
+                            ng-style="NowPlaying.duration? {'visibility':'visible'}:{'visibility':'hidden'}"/></div>
                 <div ng-if="NowPlaying.duration">{{NowPlaying.duration | secondsToDateTime | date:'mm:ss'}}</div>
             </div>
         </div>
