Added transition, Issue Fix #60 #58

--- a/control/content/templates/modals/rm-item-modal.html
+++ b/control/content/templates/modals/rm-item-modal.html
@@ -12,6 +12,6 @@
         <a class="text-primary default-background-hover transition-third" ng-click="RemovePopup.cancel()">Cancel</a>
     </div>
     <div class="col-md-6 pull-right text-center border-left-grey">
-        <a class="text-danger default-background-hover transition-third" ng-click="RemovePopup.ok()">Remove</a>
+        <a class="text-danger default-background-hover transition-third" ng-click="RemovePopup.ok()">Delete</a>
     </div>
 </div>
