--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -1,10 +1,15 @@
 <div class="holder padding-zero">
-    <div class="media-center-plugin layout1">
+    <div class="media-center-plugin layout1" data-ng-hide="WidgetMedia.showSource">
         <div class="media-center-banner clearfix">
-            <div ng-class="WidgetMedia.item.data.videoUrl == '' ? '' : 'video-container-background'" class="plugin-slider text-center">
-                <div ng-class="WidgetMedia.item.data.videoUrl == '' ? '' : 'video-container-background'" ng-style="WidgetMedia.item.data.videoUrl == '' ? {'min-height': '192px'} : {}"  class="plugin-slide">
-                    <img style="width: 100% !important;" data-ng-hide="WidgetMedia.item.data.videoUrl || !WidgetMedia.item.data.topImage"
+            <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
+                 class="plugin-slider text-center">
+                <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
+                     ng-style="WidgetMedia.showVideo == false ? {'min-height': '192px'} : {}"
+                     class="plugin-slide">
+                    <img style="width: 100% !important;"
+                         data-ng-hide="WidgetMedia.showVideo || !WidgetMedia.item.data.topImage"
                          ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 342 : 192}}"/>
+
                     <div ng-include="'templates/layouts/video-player.html'"></div>
                 </div>
             </div>
@@ -14,12 +19,16 @@
             <h5 class="margin-bottom-zero">{{WidgetMedia.item.data.summary}}</h5>
         </div>
         <div class="padded padding-top-zero">
-            <hr class="small" ng-if="WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl || WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.links.length">
+            <hr class="small"
+                ng-if="WidgetMedia.item.data.audioUrl || WidgetMedia.item.data.videoUrl || WidgetMedia.item.data.srcUrl || WidgetMedia.item.data.links.length">
             <div class="link-list">
                 <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
                    href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl" ng-click="WidgetMedia.API.play()" >Watch</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}" target="_blank">View Source</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl"
+                   ng-click="WidgetMedia.toggleShowVideo();">Watch</a>
+                <!--<a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}"
+                   target="_blank">View Source</a>-->
+                <a id="sourceToggleButton" class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" ng-click="WidgetMedia.showSourceIframe()">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
 
             </div>
@@ -31,5 +40,10 @@
                 <a class="d-link" ng-repeat="link in WidgetMedia.item.data.links">{{link.title}}</a>
             </div>
         </div>
+    </div>
+    <div ng-if="WidgetMedia.showSource">
+        <!--<iframe ng-if="WidgetMedia.iframeSrcUrl" id="sourceIframe" ng-src="WidgetMedia.iframeSrcUrl">-->
+        <iframe style="height: 590px" id="sourceIframe">
+        </iframe>
     </div>
 </div>
