--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -32,7 +32,7 @@
         <div class="text-center margin-top-fifteen">
             <span class="icon icon-dots"></span>
         </div>
-        <div class="media-player-action-btns margin-top-twenty">
+        <div class="media-player-action-btns margin-top-ten audio-temporary-fix">
             &nbsp;<input class="rotate-270"
                          ng-style="NowPlaying.showVolume? {'visibility':'visible'}:{'visibility':'hidden'}" type="range"
                          min="0" max="1" step="0.1" ng-model="NowPlaying.volume"
