--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -1,5 +1,5 @@
 <div class="holder padding-zero">
-    <div class="media-center-plugin layout1" data-ng-hide="WidgetMedia.showSource">
+    <div class="media-center-plugin layout1">
         <div class="media-center-banner clearfix">
             <div ng-class="WidgetMedia.showVideo == false ? '' : 'video-container-background'"
                  class="plugin-slider text-center">
@@ -40,10 +40,5 @@
                 <a class="d-link" ng-repeat="link in WidgetMedia.item.data.links">{{link.title}}</a>
             </div>
         </div>
-    </div>
-    <div ng-if="WidgetMedia.showSource">
-        <!--<iframe ng-if="WidgetMedia.iframeSrcUrl" id="sourceIframe" ng-src="WidgetMedia.iframeSrcUrl">-->
-        <iframe style="height: 590px" id="sourceIframe">
-        </iframe>
     </div>
 </div>
